--- a/EuDoutor/views/cadastro.ejs
+++ b/EuDoutor/views/cadastro.ejs
@@ -42,8 +42,19 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/convenio">Convênios</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Especialidades
+                            </a></a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/pediatria">Pediatria</a></li>
+                                <li><a class="dropdown-item" href="/ortopedia">Ortopedia</a></li>
+                                <li><a class="dropdown-item" href="/oftalmologia">Oftalmologia</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">MeuDoutor</a>
+                            <a class="nav-link" href="/meudoutor">MeuDoutor</a>
                         </li>
                         <div>
                             <form action="/logout?_method=DELETE" method="post">
@@ -60,7 +71,7 @@
         <nav class="int_nav">
             <br><br><br><br><br><br>
             <ul>
-                <li class="txt_center"><button class="txt1"><a href="/" class="link1">Index</a></button></li>
+                <li class="txt_center"><button class="txt1"><a href="/meudoutor" class="link1">Index</a></button></li>
                 <br><br>
                 <li class="txt_center"><button class="txt2"><a href="/posts" class="link2">Atestados
                             criados</a></button></li>
