--- a/EuDoutor/views/landing.ejs
+++ b/EuDoutor/views/landing.ejs
@@ -54,7 +54,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">MeuDoutor</a>
+                            <a class="nav-link" href="/meudoutor">MeuDoutor</a>
                         </li>
                         <div>
                             <form action="/logout?_method=DELETE" method="post">
@@ -100,39 +100,43 @@
         </button>
     </div>
 
+    <br><br>
     <h1 id="txt_center1">Unidades</h1>
+    <br>
     <div class="sections">
         <section id="s1">
             <img src="/public/assets/img/Unidade Santos.png" alt="" class="div_center1">
         </section>
         <section id="s2">
-            <img src="/public/assets/img/Unidade SP.png" alt="" class="div_center">
+            <img src="/public/assets/img/Unidade SP.png" alt="" class="div_center2">
         </section>
         <section id="s3">
-            <img src="/public/assets/img/UnidadeBH.png" alt="" class="div_center">
+            <img src="/public/assets/img/UnidadeBH.png" alt="" class="div_center3">
         </section>
     </div>
 
+    <br><br>
     <h1 id="txt_center2">Equipamentos</h1>
+    <br>
     <div class="sections">
         <section id="s1">
-            <img src="/public/assets/img/Equipamento1.png" alt="" class="div_center">
+            <img src="/public/assets/img/Equipamento1.png" alt="" class="div_center4">
         </section>
         <section id="s2">
-            <img src="/public/assets/img/Equipamento2.png" alt="" class="div_center">
+            <img src="/public/assets/img/Equipamento2.png" alt="" class="div_center5">
         </section>
         <section id="s3">
-            <img src="/public/assets/img/Equipamento3.png" alt="" class="div_center">
+            <img src="/public/assets/img/Equipamento3.png" alt="" class="div_center6">
         </section>
     </div>
 
+    <br>
     <h1 id="txt_center3">Feedback dos Pacientes</h1>
     <section class="feed">
 
         <img src="/public/assets/img/feedback1.png" alt="imgpac1" class="pac1">
-        <p class="feed1">Ótimos médicos e atendimento! Fiz um tratamento de visão e estou muito satisfeito com
-            o
-            resultado.</p>
+        <p class="feed1">Ótimos médicos e atendimento! Fiz um tratamento de 
+            visão e estou muito satisfeito com o resultado.</p>
 
         <img src="/public/assets/img/feedback.2.png" alt="imgpac2" class="pac2">
         <p class="feed2">Serviço de qualidade com um preço incrível. Recomendo para todos!</p>
