--- a/EuDoutor/views/oftalmologia.ejs
+++ b/EuDoutor/views/oftalmologia.ejs
@@ -54,7 +54,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">MeuDoutor</a>
+                            <a class="nav-link" href="/meudoutor">MeuDoutor</a>
                         </li>
                         <div>
                             <form action="/logout?_method=DELETE" method="post">
@@ -68,6 +68,7 @@
     </nav>
 
     <div class="container">
+        <br><br>
         <h1 id="txt_center1">Oftalmologia</h1>
         <P id="txt_center2">A Oftalmologia é uma das especialidades da Medicina que investiga e trata as doenças
             relacionadas com a visão e com os olhos e seus anexos.Esta especialidade médica se dedica ao estudo e
@@ -77,6 +78,7 @@
 
     <section id="s1">
         <img src="/public/assets/img/Dr LucioPS.jpg" alt="" id="img1_s1">
+        <br><br>
         <p id="p_s1">Oftalmologista especialista em Plástica Ocular.
             Atuo na prevenção, diagnóstico e tratamento de doenças que comprometem a região das pálpebras há mais de 16
             anos. Não somente nas patologias, mas também na parte estética. Graduada em Medicina e Oftlamologia pela
@@ -84,6 +86,7 @@
     </section>
     <section id="s2">
         <img src="/public/assets/img/Dra AnaPS.png" alt="" id="img2_s2">
+        <br><br>
         <p id="p_s2">Oftalmologista com experiência de 20 anos em atendimento clínico e cirúrgico.
             Sou especializada nas diversas cirurgias oftalmológicas, desde as cirurgias de pequeno porte até as mais
             complexas.
@@ -91,6 +94,7 @@
     </section>
     <section id="s3">
         <img src="/public/assets/img/Dr DaviPS.jpg" alt="" id="img3_s3">
+        <br><br>
         <p id="p_s3">Título de especialista pelo Conselho Brasileiro de Oftalmologia. Formado pela Escola Paulista de
             medicina, com mais de 30 anos de experiência.
             Especializado em cirurgia de Catarata e Laser para Miopia, Hipermetropia e Astigmatismo.
