--- a/EuDoutor/views/posts.ejs
+++ b/EuDoutor/views/posts.ejs
@@ -54,7 +54,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">MeuDoutor</a>
+                            <a class="nav-link" href="/meudoutor">MeuDoutor</a>
                         </li>
                         <div>
                             <form action="/logout?_method=DELETE" method="post">
@@ -71,7 +71,7 @@
         <nav class="int_nav">
             <br><br><br><br><br><br>
             <ul>
-                <li class="txt_center"><button class="txt1"><a href="/" class="link1">Index</a></button></li>
+                <li class="txt_center"><button class="txt1"><a href="/meudoutor" class="link1">Index</a></button></li>
                 <br><br>
                 <li class="txt_center"><button class="txt2"><a href="/posts" class="link2">Atestados
                             criados</a></button></li>
